@@ -11,3 +11,8 @@ export DH_GOPKG := github.com/dustinkirkland/golang-petname
 override_dh_install:
 	mkdir -p ${PWD}/debian/tmp/usr/lib
 	dh_install
+
+ifeq ($(shell ls -d /usr/share/doc/golang-any-shared-dev/),/usr/share/doc/golang-any-shared-dev/)
+override_dh_gencontrol:
+	dh_gencontrol -- -V'shlibs:Depends=libgolang-petname1'
+endif
